--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-Python/TelegramBots/.env
+/Python/TelegramBots/.env
 Python/TelegramBots/.venv
 Python/TelegramBots/.idea
 Qlik/Первое приложение с несколькими источниками
