--- a/Python/TelegramBots/.env
+++ b/Python/TelegramBots/.env
@@ -1,2 +1,2 @@
-TELEGRAM_BOT_TOKEN="7837233317:AAFABao2FYQa8LuoVlmRAFBG7MQ6MPFrdSE"
-ADMIN_CHAT_ID="-4252357560"
+TELEGRAM_BOT_TOKEN="TELEGRAM_BOT_TOKEN"
+ADMIN_CHAT_ID="ADMIN_CHAT_ID"
